AC_INIT([tlsdate], [0.1], [jacob at appelbaum.net])
AM_INIT_AUTOMAKE([tlsdate], [0.1])
AM_CONFIG_HEADER([tlsdate-config.h])
AC_CANONICAL_HOST

# Debug and hardening flags all in one shot
CFLAGS=" -g -O1 -Wall -fno-strict-aliasing "
CFLAGS+=" -D_FORTIFY_SOURCE=2 -fstack-protector-all "
CFLAGS+=" -fwrapv -fPIE -Wstack-protector "
CFLAGS+=" --param ssp-buffer-size=1 "
LDFLAGS=" -pie -z relro -z now "

# Required headers
AC_CHECK_HEADERS(
  stdio.h  \
  stdint.h \
  stdlib.h \
  getopt.h \
  sys/time.h \
  time.h \
  arpa/inet.h \
  openssl/bio.h \
  openssl/ssl.h \
  openssl/err.h \
  openssl/evp.h \
  sys/prctl.h \
  sys/types.h \
  sys/capability.h \
  unistd.h \
  pwd.h \
  grp.h
, , AC_MSG_ERROR([Required headers missing; compilation will not succeed]))

man_MANS = tlsdate.1

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
